2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* make all conversion is done by ensure_unicode or ensure_str to ensure uniform
	  handling of unicode issues.

2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* More fixes to unicode handling.

2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixes to make clipboard play nice with unicode. Quick that treats the clipboard as
	  being str with pyreadline_encoding data. Thus convert to unicode when pasting and
	  converting to str when copying.

2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* More fixes to ensure unicode works when completing on filepaths with non ascii symbols. 
	  This fix assumes sys.stdout.encoding is valid for the filesystem. A more correct fix
	  must be applied to the completer code which is outside pyreadline.
	  Any str characters fed into pyreadline should be converted to unicode using 
	  unicode_helper.ensure_unicode.
	* The encoding assumed of strings is sys.stdout.encoding this can be changed by:
	  e.g.  pyreadline.unicode_helper.pyreadline_codepage="utf8"

2007-10-30 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixing console.title to work with wide characters
	* Fixing wide character bug for log_sock
	
2007-10-30 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Add tests for history buffer. Add ignore_leading_spaces option for 
	  history searches for forward_search_history, and reverse_search_history.
	
2007-10-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Patch as provided by pan. Changed ensure_text to decode to 
	  consoles codepage instead of utf8, to ensure proper printing
	  of tab completion of files/directories with non ascii characters
	
2007-07-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix bug that made copying fail in some cases 
	* Fix bug in parse_and_bind, reported by Michael Graz.
	* Change version string to 1.5.svn
	