@@ -1,3 +1,7 @@
+2007-11-20 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
+	* Applying patch from pan to fix flickering cursor problem when doing input
+	  of chinese.
+	
 2007-11-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* make all conversion is done by ensure_unicode or ensure_str to ensure uniform
 	  handling of unicode issues.
